--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,25 @@
 
 body {
   margin: 0;
-  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  color: #333;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+main {
+  padding: 24px;
+}
+
+button {
+  cursor: pointer;
 }
