--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 16px;
-  border-bottom: 1px solid black;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 
   button {
     + button {
